# mrs_uav_general

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  generate.sh  package.xml  plugins.xml
.ci/: deploy_key_github.enc
config/: arena_current.yaml  arena_local.yaml  arena_simulation.yaml  automatic_start.yaml  automatic_start_darpa.yaml  automatic_start_eagle.yaml  automatic_start_mbzirc.yaml  automatic_start_pointer.yaml  communication_config.yaml  debug_verbosity.yaml  px4_config.yaml  px4_config_old.yaml  px4_pluginlists.yaml  setArenaTo.sh  setWorldTo.sh  tomasuv_tf_publisher.yaml  trajectory_checker.yaml  uav_names.yaml  uav_names_simulation.yaml  world_ball_arena.yaml  world_camp.yaml  world_cisar.yaml  world_current.yaml  world_darpa.yaml  world_darpa_aloam.yaml  world_darpa_hector.yaml  world_desert_building.yaml  world_desert_koryto.yaml  world_desert_shit.yaml  world_domasice.yaml  world_domasice_eagle.yaml  world_fire_arena.yaml  world_local.yaml  world_local.yaml.orig  world_local_hector.yaml  world_rumburk.yaml  world_simulation.yaml  world_simulation_challenge1.yaml  world_simulation_challenge2.yaml  world_simulation_local.yaml  (+6 more)
config/camera_calibrations/: mv_25001954.yaml  mv_25001954_equi.yaml  mv_25001954_radtan.yaml  mv_25002493.yaml  mv_25002514.yaml  mv_25002533.yaml  mv_26805832_f21_old.yaml  mv_26805832_radtan.yaml  mv_26805850.yaml  mv_26805883.yaml  mv_26807156.yaml  mv_26807157.yaml  mv_26807159.yaml  mv_26807162.yaml  mv_26807321.yaml  mv_26807375_darpa.yaml  mv_26807497.yaml  mv_26807552.yaml  mv_26807556.yaml  mv_26807558.yaml  mv_26807560.yaml  mv_26807581.yaml  mv_26807588_darpa.yaml
config/camera_calibrations/basler/: basler_23743715.yaml  basler_23743716.yaml  basler_23743717.yaml  basler_23743718.yaml  basler_23750991.yaml  basler_23750992.yaml  basler_23764941.yaml
config/camera_calibrations/mobius/: mobius_narrow.yaml
config/logger_verbosity/: debug_verbosity.conf
config/rviz/: trajectory_checker.rviz  uav1.rviz
config/uvdar_calibrations/camera_calibrations/: calib_results_bf_uv_25002504.txt  calib_results_bf_uv_2500349.txt  calib_results_bf_uv_25003650.txt  calib_results_bf_uv_25003657.txt  calib_results_bf_uv_25003671.txt  calib_results_bf_uv_25003875.txt  calib_results_bf_uv_25003899.txt  calib_results_bf_uv_25003902.txt
config/worlds/: world_camp.yaml  world_cisar.yaml  world_darpa.yaml  world_darpa_aloam.yaml  world_darpa_hector.yaml  world_domasice.yaml  world_domasice_eagle.yaml  world_farm_seven_stars.yaml  world_farmstay_basin.yaml  world_local.yaml  world_local_hector.yaml  world_naki.yaml  world_nemi_ground.yaml  world_nemi_water.yaml  world_rumburk.yaml  world_rumburk_parachute.yaml  world_rumburk_pole.yaml  world_simulation.yaml  world_simulation_challenge1.yaml  world_simulation_challenge2.yaml  world_simulation_large_safety_area.yaml  world_simulation_local.yaml  world_svetovar.yaml  world_temesvar_field.yaml  world_temesvar_louka.yaml  world_temesvar_mockup.yaml  world_temesvar_river.yaml  world_temesvar_vltava.yaml  world_tii_net.yaml  world_tusovice.yaml  world_tusovice_garden.yaml  world_tusovice_left_from_electricity.yaml  world_tusovice_right_from_electricity.yaml  world_upenn.yaml  world_usmocku.yaml
include/rosbag/: recorder.h
launch/: automatic_start.launch  automatic_start_darpa.launch  automatic_start_eagle.launch  automatic_start_mbzirc.launch  automatic_start_pointer.launch  bluefox_darpa.launch  bluefox_left.launch  bluefox_right.launch  core.launch  grasping_gazebo.launch  hector_slam.launch  landing_gazebo.launch  logitech_joystick.launch  mavros_f550.launch  mavros_f550_namespaced.launch  mavros_simulation.launch  mavros_uav.launch  multimaster-client.launch  multimaster-server.launch  nimbro.launch  node_crash_checker.launch  nodelet_manager.launch  nodelet_manager_pig.launch  pig_record.launch  plain_gazebo.launch  record.launch  record_brick.launch  record_msckf.launch  record_msckf_infra_only.launch  record_stola_josef.launch  record_v.launch  republish_cameras_to_raw.launch  rviz_uav1.launch  sensors.launch  sensors_darpa.launch  sensors_dataset.launch  sensors_dataset_with_tf.launch  sensors_hector.launch  sensors_hector_velodyne.launch  sensors_marek.launch  (+11 more)
launch/old/: sensors_dataset_with_tf.launch
launch/records/: record_svo.launch
launch/records_old/: record_balloons.txt  record_darpa.txt  record_msckf.txt
launch/records_old_delete/: record_chlumin_dataset.launch
scripts/: check_ros_package.sh  record.sh  record_balloons.sh  record_baloons.sh  record_brick.sh  record_darpa.sh  record_vio.sh  run_nimbro.py  set_broadcast_rc_variable.sh  trajectory_checker.py
src/: automatic_start.cpp  automatic_start_darpa.cpp  automatic_start_eagle.cpp  automatic_start_mbzirc.cpp  automatic_start_pointer.cpp  record.cpp  recorder.cpp  tomasuv_tf_publisher.cpp
