<?xml version="1.0"?>
<package format="2">

  <name>mrs_general</name>
  <version>0.0.3</version>
  <description>The mrs_main package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
