<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_general</name>
  <version>1.0.0</version>
  <description>The mrs_uav_general package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
